removes misplaced text

--- a/login-ui.html
+++ b/login-ui.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="login-ui.css">
     <title>Login UI</title>
 </head>
-<body>gt
+<body>
     <div class="container">
         <div class="card">
             <H1>Sign in</H1>
