--- a/login-ui.html
+++ b/login-ui.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login-ui.css">
-    <title>Login UI</title>
-</head>
-<body>
-    <div class="container">
-        <div class="card">
-            <H1>Sign in</H1>
-            <input type="text" name="username" placeholder="username" />
-            <input type="password" name="password" placeholder="password" />
-            <button name="sign-in">sign-in</button>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="login-ui.css">
+        <title>Login UI</title>
+    </head>
+    <body>
+        <div class="container">
+            <div class="card">
+                <h1>Sign in</h1>
+                <input type="text" name="username" placeholder="username" />
+                <input type="password" name="password" placeholder="password" />
+                <button name="sign-in">sign-in</button>
+            </div>
         </div>
-    </div>
-</body>
+    </body>
 </html>
